--- a/src/style/style.css
+++ b/src/style/style.css
@@ -15,10 +15,28 @@ ul {
 
 
 body {
-	font-size: 16px;
-	font-family: 'Helvetica Neue', Arial, sans-serif;
-	color: #444;
-	margin: 30px 40px;
+	margin:0px;
+}
+
+
+.header {
+background-color: gray;
+color: white;
+width: 100%;
+height: 70px;
+font-family: sans-serif;
+font-weight: bold;
+font-size: 28px
+}
+
+.wrapper {
+	width:90%;
+	height:85vh;
+	position:relative;
+	margin:auto;
+	margin-top:30px;
+	text-align:center;
+	border:1px dotted gray;
 }
 
 .controls {
@@ -62,13 +80,6 @@ body {
 border: 1px dotted #B2B2B2;
 }
 
-.wrapper {
-
-	width:680px;
-	position:relative;
-	margin:auto;
-	text-align:center;
-}
 
 
 .add-block-wrapper{
