--- a/src/style/style.css
+++ b/src/style/style.css
@@ -132,14 +132,23 @@ border: 1px dotted #B2B2B2;
 	top: 15px;
 }
 
-.color-box {
+.line-chart {
 	position: absolute;
 	color:#424242;
 	right: 40px;
 	top: 15px;
 }
 
-.color-box:hover,
+.spider-chart {
+	position: absolute;
+	color:#424242;
+	right: 70px;
+	top: 15px;
+}
+
+
+.line-chart:hover,
+.spider-chart:hover,
 .cancel-box:hover{
 	color: gray;
 }
@@ -198,3 +207,23 @@ border: 1px dotted #B2B2B2;
 	cursor:default !important;
 }
 
+
+.line {
+	stroke: gray;
+	stroke-width: 1px;
+	fill: transparent
+}
+
+.axis path,
+.axis line {
+	fill: transparent;
+	stroke: #D8D8D8;
+	shape-rendering: crispEdges;
+	}
+
+.x,
+.y {
+	font-family: arial;
+	font-size:11px;
+	font-weight: bold;
+}
