--- a/src/style/style.css
+++ b/src/style/style.css
@@ -146,7 +146,14 @@ border: 1px dotted #B2B2B2;
 	top: 15px;
 }
 
+.bar-chart {
+	position: absolute;
+	color:#424242;
+	right: 100px;
+	top: 15px;
+}
 
+.bar-chart:hover,
 .line-chart:hover,
 .spider-chart:hover,
 .cancel-box:hover{
@@ -239,3 +246,4 @@ border: 1px dotted #B2B2B2;
 	font-size:11px;
 	font-weight: bold;
 }
+
