--- a/src/style/style.css
+++ b/src/style/style.css
@@ -23,10 +23,16 @@ body {
 background-color: gray;
 color: white;
 width: 100%;
-height: 70px;
-font-family: sans-serif;
+height: 90px;
+font-family: 'Oswald';
 font-weight: bold;
-font-size: 28px
+font-size: 28px;
+padding-top: 10px;
+}
+
+.title-container {
+    margin-left: 110px;
+    font-size: 50px;
 }
 
 .wrapper {
@@ -69,9 +75,11 @@ font-size: 28px
 /*/
 
 .gridster ul {
-	background-color: transparent;
-	border: 2px dotted #B2B2B2;
+	background-color: #7E7E8C;
+	border: 2px solid gray;
 	padding-bottom: 5px;
+	border-radius:5px;
+	box-shadow: inset 3px 3px 10px 0px #616161
 }
 
 .gridster div {
