--- a/src/style/style.css
+++ b/src/style/style.css
@@ -25,7 +25,7 @@ html {
 
 .header {
 	background-color: #4E4E4E;
-	color: white;
+	color: #F3F3F3;
 	width: 100%;
 	height: 90px;
 	font-family: 'Oswald';
@@ -33,6 +33,19 @@ html {
 	font-size: 28px;
 	padding-top: 10px;
 }
+
+
+.fyke-svg-container {
+height: 65px;
+margin-top: 10px;
+margin-left: 12%;
+}
+
+
+.fyke-svg-container svg {
+fill: white;
+}
+
 
 .title-container {
     left: 110px;
