Introduce Full Lock Unlock Logic

--- a/src/modules/templates/widgetTemplate.html
+++ b/src/modules/templates/widgetTemplate.html
@@ -1,11 +1,3 @@
 <div id="{{id}}">
-	<div class="widget-header" data-type="scatter">
-		<i class="transparent chart scatter-chart fa fa-th-large selected" data-type="scatter"></i> 
-		<i class="transparent chart bar-chart fa fa-bar-chart" data-type="bar"></i> 
-		<i class="transparent chart spider-chart fa fa-asterisk" data-type="spider"></i> 
-		<i class="transparent chart line-chart fa fa-line-chart" data-type="line"></i> 
-		<i class="transparent chart cancel-chart fa fa-times"></i> 
-	</div>
-	<div class="chart-container">
-	</div>
-</div>';
+	<div class="chart-wrapper"><div>
+</div>
