Update Launcher Button

--- a/src/modules/templates/launcherTemplate.html
+++ b/src/modules/templates/launcherTemplate.html
@@ -1,8 +1,9 @@
 
-<div class="launcher {{#isLocked}} locked {{/isLocked}}">
-	<div class='launcher-label'> {{^isLocked}} Lock {{/isLocked}} {{#isLocked}} Unlock {{/isLocked}} </div>
-	<a class="launcher-icon freeze-block fa {{^isLocked}} fa-lock {{/isLocked}} {{#isLocked}} fa-unlock {{/isLocked}}"></a>
+<a class="launcher-icon lock fa fa-lock"></a> 
+<div class='launcher-switch-container'> 
+	<div class='launcher-switch'></div>
 </div>
+<a class="launcher-icon unlock fa fa-unlock locked"></a> 
 
 
 
