--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,7 +22,6 @@ html {
     overflow-y:scroll;
 }
 
-
 .header {
 	background-color: #4E4E4E;
 	color: #F3F3F3;
@@ -35,24 +34,40 @@ html {
 }
 
 
-.fyke-svg-container {
-    height: 75px;
-    margin-top: 0px;
-    margin-left: 130px;
+.header-title {
+	left: 110px;
+	font-size: 24px;
+	position: relative;
+	float:left;
 }
 
 
-.fyke-svg-container svg {
+.header-logo {
+	height: 60px;
+	margin-top: 25px;
+	margin-left: 45px;
+	float: left;
+	position: relative;
+}
+
+
+/*.fyke-svg-container svg {
 fill: white;
 }
+*/
 
 
-.title-container {
-    left: 110px;
-    font-size: 50px;
-    position: relative;
-    float:left;
+
+.dashboard-tab,
+.analytics-tab {
+position: relative;
+float: left;
+height:100%;
+width:300px;
+border:1px solid white;
 }
+
+
 
 .launcher-container {
     width: 170px;
@@ -104,7 +119,7 @@ background-color: #F3F5F6;
 .launcher-icon {
 font-size:24px !important;
 position: relative !important;
-margin-top:12px;
+margin-top:15px;
 -moz-transition-duration: 400ms;
 -o-transition-duration: 400ms;
 -webkit-transition-duration: 400ms;#5F5F5F
