Render entire header in HeaderController

--- a/src/modules/templates/launcherTemplate.html
+++ b/src/modules/templates/launcherTemplate.html
@@ -1,9 +1,19 @@
 
-<a class="launcher-icon lock fa fa-lock"></a> 
-<div class='launcher-switch-container'> 
-	<div class='launcher-switch'></div>
-</div>
-<a class="launcher-icon unlock fa fa-unlock locked"></a> 
+<div class='header-title'>FYKE</div>
+<img src="./resources/images/fyke.svg" class="header-logo">
+<div class='dashboard-tab tab selected' data-tab='dashboard'>DASHBOARD</div>
+<div class='analytics-tab tab' data-tab='streams'>STREAMS</div>
+
+
+<div class="launcher-container">
+	<a class="launcher-icon lock fa fa-lock"></a> 
+		<div class='launcher-switch-container'> 
+			<div class='launcher-switch'></div>
+		</div>
+	<a class="launcher-icon unlock fa fa-unlock locked"></a> 
+</div>	
+
+
 
 
 
