--- a/src/modules/templates/streamListTemplate.html
+++ b/src/modules/templates/streamListTemplate.html
@@ -1,7 +1,27 @@
-<div class='stream-list-container'> 
+<div class='stream-list-container stream-container'> 
+
+
+	<div class='stream-list-item'>
+
+	</div>
+
+	<div class='stream-list-item'>
+
+	</div>
+
+	<div class='stream-list-item'>
+
+	</div>
+
+	<div class='stream-list-item'>
+
+	</div>
+
 
 </div>
 
-<div class='stream-manipulation-container'> 
+
+
+<div class='stream-manipulation-container stream-container'> 
 
 </div>
