Create Views for Streamboard

--- a/src/modules/streams/templates/streamListTemplate.html
+++ b/src/modules/streams/templates/streamListTemplate.html
@@ -1,27 +1,40 @@
 <div class='stream-list-container stream-container'> 
 
 
-	<div class='stream-list-item'>
+	<div class ='stream-list-wrapper'>
+
+
+		<div class='stream-list-item'>
+			<div class='stream-list-item-status ok'> </div>
+			<div class='stream-list-item-header'> Stream 1 </div>
+
+		</div>
+
+		<div class='stream-list-item'>
+			<div class='stream-list-item-status ok'> </div>
+			<div class='stream-list-item-header'> Stream 2 </div>
+
+		</div>
+
+		<div class='stream-list-item'>
+			<div class='stream-list-item-status ok'> </div>
+			<div class='stream-list-item-header'> Stream 3 </div>
+
+		</div>
+
+		<div class='stream-list-item'>
+			<div class='stream-list-item-status ok'> </div>
+			<div class='stream-list-item-header'> Stream 4 </div>
+
+		</div>
+
 
 	</div>
 
-	<div class='stream-list-item'>
 
-	</div>
-
-	<div class='stream-list-item'>
-
-	</div>
-
-	<div class='stream-list-item'>
-
-	</div>
+	<a class='stream-list-adder fa fa-plus-square-o'> </a>
 
 
 </div>
 
 
-
-<div class='stream-manipulation-container stream-container'> 
-
-</div>
