--- a/src/modules/streams/templates/streamboardControllerTemplate.html
+++ b/src/modules/streams/templates/streamboardControllerTemplate.html
@@ -1,3 +1,13 @@
 <div class="sub-wrapper">
 
+	<div class='stream-list'> 
+
+	</div>
+
+
+	<div class='stream-manipulation'> 
+
+	</div>
+
+
 </div>
