--- a/src/style/style.css
+++ b/src/style/style.css
@@ -26,45 +26,33 @@ html {
 	background-color: #4E4E4E;
 	color: #F3F3F3;
 	width: 100%;
-	height: 90px;
+    height: 60px;
 	font-family: 'Oswald';
 	font-weight: bold;
 	font-size: 28px;
 	padding-top: 10px;
 }
 
-
-.header-title {
-	left: 110px;
-	font-size: 24px;
-	position: relative;
-	float:left;
-}
-
-
 .header-logo {
 	height: 60px;
-	margin-top: 25px;
-	margin-left: 45px;
+	margin-left: 15px;
 	float: left;
 	position: relative;
-}
-
-.dashboard-tab {
-
 }
 
 
 .dashboard-tab-menu {
 position: relative;
-width: calc(100% - 743px); /* TODO header breite genau bestimmen; */
+width: calc(100% - 600px); /* TODO header breite genau bestimmen; */
 height: 55px;
 float: left;
-margin-top: 35px;
-background-color: #585858;
+margin-top: 5px;
 }
 
 
+.dashboard-tab {
+
+}
 
 .analytics-tab {
 margin-left:15px !important;
@@ -75,8 +63,8 @@ font-family:'Raleway';
 position: relative;
 float: left;
 height: 33px;
-width: 220px;
-margin-top: 33px;
+width: 150px;
+margin-top: 3px;
 margin-left: 100px;
 border: 1px solid #C1C0C0;
 text-align: center;
@@ -166,13 +154,13 @@ transition-duration: 400ms;
 .lock {
 	width:15px;
 	float:left;
-	color:#504f4f;
+	color:black;
 }
 
 .unlock {
 	width:15px;
 	float:right;
-	color:#504f4f;
+	color:black;
 }
 
 
@@ -422,7 +410,7 @@ transition: background-color 600ms, transform 600ms;
 	position: relative;
 	width: 39%;
 	height: 100%;
-
+	overflow:auto;
 }
 
 .stream-manipulation {
