Update Model-View-Controller Logic

--- a/src/modules/streams/templates/streamItemTemplate.html
+++ b/src/modules/streams/templates/streamItemTemplate.html
@@ -3,6 +3,7 @@
 <div class='stream-list-item'>
 	<div class='stream-list-item-status ok'> </div>
 	<div class='stream-list-item-header'> {{name}} </div>
+	<div class='stream-list-item-cancel fa fa-times hidden'></div>
 
 </div>
 {{/connectionEstablished}}
