--- a/src/style/style.css
+++ b/src/style/style.css
@@ -455,13 +455,27 @@ transition: background-color 600ms, transform 600ms;
 .stream-list-item-header {
     text-align: left;
     margin-left: 10px;
-    font-size: 16px;
+    margin-top:2px;
+    font-size: 15px;
     font-weight:bold;
     font-family: sans-serif;
     width: 40%;
     float:left;
     color:#424242;
 }
+
+.stream-list-item-cancel {
+	float: right;
+    margin-right: 8px;
+    margin-top: 2px;
+    color:gray;
+    cursor:pointer;
+}
+
+.stream-list-item-cancel:hover {
+	color:black;
+}
+
 
 .stream-list-item {
 	height: 77px;
