--- a/src/style/styleLogin.css
+++ b/src/style/styleLogin.css
@@ -116,6 +116,22 @@
       color:white;
     }
 
+    .login-button.selected {
+      background-color:#757373;
+      box-shadow: inset 2px 2px 3px 1px #5a5a5a;
+      border-bottom:0px;
+      border:1px solid #4E4E4E !important;
+      color:white;
+    }
+
+    .login-facebook.selected {
+      background-color:#6887c7;
+      box-shadow: inset 2px 2px 3px 1px #4b4979;
+      border-bottom:0px;
+      border:1px solid #4E4E4E !important;
+      color:white;
+    }
+
     .login-wrapper-container-login {
       margin-left: 7%;
     }
