Implement Basic Authentication

--- a/src/modules/login/templates/loginViewTemplate.html
+++ b/src/modules/login/templates/loginViewTemplate.html
@@ -6,12 +6,12 @@
 
  		<img src="../../resources/images/fyke.svg">
         <div class="login-wrapper-container-fyke">FYKE</div>
-
-        <input placeholder="Email">
+        <input placeholder="Email" type="username">
         <input placeholder="Password" type="password">
 
-        <button class="login-button button"> Log In</button>
-        <button class="login-facebook button"> Login with Facebook  <i class="fa fa-facebook-official" style="font-size:20px"></i> </button>
+<!--         <a href="/" class="login-button button"> Log In</a> -->
+        <a class="login-button button"> Log In</a>
+        <a class="login-facebook button"> Login with Facebook  <i class="fa fa-facebook-official" style="font-size:20px"></i> </a>
 
         <div class="login-wrapper-container-login tab selected"> Log In </div>
         <div class="login-wrapper-container-signup tab"> Sign Up </div>
@@ -29,8 +29,8 @@
         <input placeholder="Password" type="password">
 		<input placeholder="Full Name">
 
-        <button class="login-button button"> Sign Up</button>
-        <button class="login-facebook button"> Login with Facebook  <i class="fa fa-facebook-official" style="font-size:20px"></i> </button>
+        <a class="signup-button button"> Sign Up</a>
+        <a class="login-facebook button"> Signup with Facebook  <i class="fa fa-facebook-official" style="font-size:20px"></i> </a>
 
         <div class="login-wrapper-container-login tab "> Log In </div>
         <div class="login-wrapper-container-signup tab selected"> Sign Up </div>
