--- a/src/style/styleLogin.css
+++ b/src/style/styleLogin.css
@@ -9,6 +9,12 @@
       min-height:700px;
     }
    
+
+    a, a:visited, a:hover, a:active {
+        text-decoration: none;
+        color:#c7c7c7;
+    }
+
     .login-wrapper {
       width:100%;
       height:90%;
@@ -30,7 +36,7 @@
 
     #login-wrapper-container > img {
       height: 100px;
-      margin-left: 95px;
+      margin-left: 98px;
     }
 
     .login-wrapper-container-fyke {
@@ -56,56 +62,67 @@
       outline:none;
     }
 
-    #login-wrapper-container > button {
-      height: 35px;
+    #login-wrapper-container > a {
+      height: 25px;
       padding:0px;
       border:0px;
-      color:white;
       border-radius:2px;
       cursor:pointer;
       margin-bottom:15px;
       outline:none;
+      text-align: center;
+      padding-top:10px !important;
     }
 
+    .signup-button,
     .login-button {
-      margin-left: 7%;
-      background-color: #4E4E4E;
-      font-family:helvetica;
-      width:85%;
-      float:left;
-      border: 1px solid #403f3f !important;
-      box-shadow: 0px 0px 2px 1px #404040, inset 1px 1px 2px 1px #5a5a5a;
-      font-size:14px;
-      font-weight:bold;
-      color:#c7c7c7 !important;
+    margin-left: 7%;
+    background-color: #4E4E4E;
+    font-family: helvetica;
+    width: 85%;
+    float: left;
+    border: 1px solid #4a4a4a !important;
+    box-shadow: 0px 0px 2px 1px #444444, inset 1px 1px 2px 1px #585858;
+    font-size: 14px;
+    font-weight: bold;
+    color: #c7c7c7;
+    }
+
+    .button {
+      color:white;    
     }
 
     .login-facebook {
-      margin-left: 7%;
-      background-color: #3B5998;
-      font-family:helvetica;
-      box-shadow: 2px 2px 5px 0px #3e3d3d, inset 1px 1px 4px 0px #5672ad;
-      width:85%;
-      float:left;
-      font-size: 15px;
-      font-weight: bold;
-      margin-bottom:30px;
+    margin-left: 7%;
+    background-color: #3B5998;
+    font-family: helvetica;
+    box-shadow: 0px 0px 2px 1px #444444, inset 1px 1px 4px 0px #5672ad;
+    width: 85%;
+    float: left;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    border: 1px solid #444444 !important;
+    }
+
+    .login-facebook:hover {
+      color: white;
     }
 
     .tab {
-      width: 140px;
-      height: 32px;
-      padding-top:18px;
-      border: 1px solid #403f3f;
-      border-bottom: 0px;
-      text-align:center;
-      font-family: arial;
-      color:#c7c7c7;
-      font-weight:bold;
-      border-radius: 3px 3px 0px 0px;
-      box-shadow: 0px -1px 2px 0px #404040, inset 1px 1px 2px 1px #5a5a5a;
-      cursor:pointer;
-      display:inline-block;
+    width: 140px;
+    height: 32px;
+    padding-top: 18px;
+    border: 1px solid #444444;
+    border-bottom: 0px;
+    text-align: center;
+    font-family: arial;
+    color: #c7c7c7;
+    font-weight: bold;
+    border-radius: 3px 3px 0px 0px;
+    box-shadow: 0px -2px 2px 1px #484848, inset 1px 1px 2px 1px #565656;
+    cursor: pointer;
+    display: inline-block;
     }
 
     .tab.selected {
@@ -119,16 +136,16 @@
     .login-button.selected {
       background-color:#757373;
       box-shadow: inset 2px 2px 3px 1px #5a5a5a;
-      border-bottom:0px;
       border:1px solid #4E4E4E !important;
+      border-bottom:0px;
       color:white;
     }
 
     .login-facebook.selected {
       background-color:#6887c7;
       box-shadow: inset 2px 2px 3px 1px #4b4979;
-      border-bottom:0px;
-      border:1px solid #4E4E4E !important;
+/*      border:1px solid #4E4E4E !important;
+      border-bottom:0px;*/
       color:white;
     }
 
