Introduce error message for wrong username or password

--- a/src/modules/login/templates/loginControllerTemplate.html
+++ b/src/modules/login/templates/loginControllerTemplate.html
@@ -1,5 +1,6 @@
 <div class="login-wrapper">
-  <div class="login-wrapper-pusher"></div>
+  <div id="login-wrapper-pusher">
+  </div>
   <div id="login-wrapper-container"></div>
 </div>
 
